fix overflow od pre tag with pre-warp

--- a/css/components/card.css
+++ b/css/components/card.css
@@ -64,6 +64,10 @@
   background-color: var(--white);
   padding-top: 1rem;
   padding-bottom: 1rem;
+  display: none;
+}
+.card:hover > .card-text-overlay {
+  display: block;
 }
 
 .card-shadow-1 {
