--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -2,9 +2,6 @@
 
 .nav {
   display: flex;
-}
-nav {
-  /* width: 100%; */
   background-color: var(--primary-color);
   color: var(--white);
   padding: 0rem;
