--- a/css/root.css
+++ b/css/root.css
@@ -16,4 +16,7 @@ pre {
   font-family: var(--font-family);
   background-color: var(--light-gray);
   padding-top: 1rem;
+  display: flex;
+  flex-flow: column wrap;
+  white-space: pre-wrap;
 }
