--- a/index.css
+++ b/index.css
@@ -9,21 +9,23 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0rem;
 }
 .container {
   display: grid;
   width: 100%;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 4fr;
   grid-template-areas: "sidebar main ";
+  gap: 0.5rem;
 }
+
 .sidebar {
   grid-area: sidebar;
   position: sticky;
   overflow-y: auto;
   top: 5rem;
   height: calc(100vh - 7rem);
+  min-width: 10rem;
 }
 .sidebar-text {
   display: flex;
@@ -31,5 +33,10 @@ body {
   justify-content: space-evenly;
 }
 .main {
+  width: 100%;
   grid-area: main;
+  display: flex;
+  flex-flow: column wrap;
+  margin: auto;
+  flex-shrink: 2;
 }
